# aoc-2023

./: .gitignore  .pre-commit-config.yaml  :w  README.md  pyproject.toml
aoc_2023/: copy_days.sh  day_x.py
aoc_2023/d1/: day1.py
aoc_2023/d10/: day10.py
aoc_2023/d11/: day11.py
aoc_2023/d12/: day12.py  sample_one.txt
aoc_2023/d13/: day13.py
aoc_2023/d14/: day14.py  day14_namedtuple.py
aoc_2023/d15/: day15.py
aoc_2023/d16/: day16.py
aoc_2023/d17/: day17.py
aoc_2023/d19/: day19.py  day19_named.py
aoc_2023/d2/: day2.py
aoc_2023/d20/: day20.py
aoc_2023/d24/: day24.py
aoc_2023/d25/: day25.py
aoc_2023/d3/: day3.py  input.txt
aoc_2023/d4/: day4.py  input.txt
aoc_2023/d5/: day5.py
aoc_2023/d6/: sample.txt
aoc_2023/d7/: sample.txt
aoc_2023/d8/: day8.py
aoc_2023/d9/: day9.py
aoc_2023/day6/: day6.py
solutions/: aoc_tools.py  copy-template.sh
solutions/d1/: day1.py
solutions/d10/: day10.py
solutions/d12/: day12.py  diffs.md  dp12.py  memo12.py  p2.py  sample.txt
solutions/d13/: day13.py  sample.txt  xor13.py
solutions/d14/: day14_namedtuple.py
solutions/d17/: day17_optimized.py
solutions/d18/: day18.py
solutions/d19/: day19.py
solutions/d20/: day20.py
solutions/d21/: day21.py
solutions/d3/: day3.py  sample2.txt
solutions/d6/: day6.py
solutions/d7/: day7.py
