[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["victor <vykuang92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.ruff]
# skip unused variable rule
ignore = ["F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
